objects/salesedgedemo__Sent_Email__c.object
<CustomObject>
    <fields>
        <fullName>salesedgedemo__Markup__c</fullName>
        <label>Markup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__RecordId__c</fullName>
        <label>RecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__Templated_Email_Id__c</fullName>
        <label>Templated Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__Text__c</fullName>
        <label>Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sent Email</label>
    <nameField>
        <label>Sent Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sent Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>